syntax = "proto3";

option go_package = "./protobuf";

message Package {
	string name = 1;
	string dir = 2;
	string import_path = 3;
	repeated GoFile go_files = 4;
}

message GoFile {
	string filename = 1;
	repeated GoDef defs = 2;
}

message GoDef {
	string name = 1;
	int64 line_num = 2;
	bool exported = 3;
}
